[tool.poetry]
name = "ue-schedule"
version = "2.1.3"
description = "UE Katowice class schedule utility library"
authors = ["Maciej Rim <maciej.rim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rimmaciej/ue-schedule.git"
keywords = ["class-schedule", "university", "ue-katowice"]

[tool.poetry.scripts]
ue-schedule = 'ue_schedule.cli:main'

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.24.0"
icalendar = "^4.0.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

