[tool.poetry]
name = "ue-schedule"
version = "3.0a1"
description = "UE Katowice class schedule utility library"
authors = ["Maciej Rim <maciej.rim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rimmaciej/ue-schedule.git"
keywords = ["class-schedule", "university", "ue-katowice"]

[tool.poetry.scripts]
ue-schedule = 'ue_schedule.cli:main'

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.24.0"
icalendar = "^4.0.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
mypy = "^0.910"
pycodestyle = "^2.7.0"
isort = "^5.9.3"
pytest = "^6.2.5"
flake8-black = "^0.2.3"
flakehell = "^0.9.0"
flake8-bandit = "^2.1.2"
flake8-isort = "^4.1.1"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.1.0"
mccabe = "^0.6.1"
pep8-naming = "^0.12.1"
flake8-pytest-style = "^1.5.0"
flake8-mutable = "^1.2.0"
pre-commit = "^2.15.0"
types-pytz = "^2021.3.0"
types-requests = "^2.25.11"
types-click = "^7.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flakehell]
extended_default_ignore=[]
format = "grouped"
max_line_length = 100
show_source = false
exclude = ['*.md']

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S101"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-black = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
