[tool.poetry]
name = "ue-schedule"
version = "3.0a1"
description = "UE Katowice class schedule utility library"
authors = ["Maciej Rim <maciej.rim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rimmaciej/ue-schedule.git"
keywords = ["class-schedule", "university", "ue-katowice"]

[tool.poetry.scripts]
ue-schedule = 'ue_schedule.cli:main'

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.1"
icalendar = "^5.0.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pycodestyle = "^2.9.1"
isort = "^5.10.1"
pytest = "^7.1.3"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
flake8-eradicate = "^1.4.0"
pep8-naming = "^0.13.2"
flake8-pytest-style = "^1.6.0"
flake8-mutable = "^1.2.0"
pre-commit = "^2.20.0"
types-pytz = "^2022.5.0.0"
types-requests = "^2.28.11.2"
types-click = "^7.1.8"
flake8 = "^5.0.4"
mccabe = "^0.7.0"
flake8-comprehensions = "^3.10.0"
flake8-bandit = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100